--- a/.github/workflows/api-key-auth.yml
+++ b/.github/workflows/api-key-auth.yml
@@ -19,7 +19,7 @@ jobs:
       #     audience: '${{ github.server_url }}/${{ github.repository_owner }}'
           
       - name: Import Secrets using CyberArk Conjur Secret Fetcher Action
-        uses: cyberark/conjur-action@v2.0.6
+        uses: vignesh-seethapathy/conjur-action@master
         with:
           url: ${{ vars.CONJUR_URL }}
           account: ${{ vars.CONJUR_ACCOUNT }}
